# fastertask

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.c
include/: colors.h  navegation.h  tasks.h  utils.h
src/: navegation.c  tasks.c
